--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# OS
+.DS_Store
+
+# Project
+build/*
+
 # Logs
 logs
 *.log
@@ -19,12 +25,6 @@ coverage
 
 # nyc test coverage
 .nyc_output
-
-# Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
-.grunt
-
-# Bower dependency directory (https://bower.io/)
-bower_components
 
 # node-waf configuration
 .lock-wscript
