--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "This is my personal React boilerplate with everything that I need.",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=development webpack-dev-server --progress --colors --hot --config ./internals/webpack/webpack.config.js --mode development",
-    "build": "cross-env NODE_ENV=production webpack --mode production"
+    "start": "cross-env NODE_ENV=development webpack-dev-server --progress --colors --hot --config ./internals/webpack/webpack.dev.js",
+
+    "prebuild": "rimraf ./build",
+    "build": "cross-env NODE_ENV=production webpack --config ./internals/webpack/webpack.prod.js"
   },
   "repository": {
     "type": "git",
@@ -27,11 +29,16 @@
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.5",
+    "circular-dependency-plugin": "^5.0.2",
+    "compression-webpack-plugin": "^2.0.0",
     "cross-env": "^5.2.0",
     "css-loader": "^2.1.0",
     "html-webpack-plugin": "^3.2.0",
+    "react-app-polyfill": "^0.2.0",
     "react-hot-loader": "^4.6.3",
+    "rimraf": "^2.6.3",
     "style-loader": "^0.23.1",
+    "terser-webpack-plugin": "^1.2.1",
     "webpack": "^4.29.0",
     "webpack-cli": "^3.2.1",
     "webpack-dev-server": "^3.1.14"
