--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "This is my personal React boilerplate with everything that I need.",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=development webpack-dev-server --progress --colors --hot --config ./internals/webpack/webpack.dev.js",
+    "start": "cross-env NODE_ENV=development webpack-dev-server --progress --colors --hot --config ./_tools/webpack/webpack.dev.js",
     "prebuild": "rimraf ./build",
-    "build": "cross-env NODE_ENV=production webpack --config ./internals/webpack/webpack.prod.js"
+    "build": "cross-env NODE_ENV=production webpack --config ./_tools/webpack/webpack.prod.js"
   },
   "repository": {
     "type": "git",
@@ -29,16 +29,17 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.5",
     "circular-dependency-plugin": "^5.0.2",
-    "compression-webpack-plugin": "^2.0.0",
+    "colors": "^1.3.3",
     "cross-env": "^5.2.0",
     "css-loader": "^2.1.0",
     "directory-named-webpack-plugin": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.11.0",
     "react-app-polyfill": "^0.2.1",
-    "react-hot-loader": "^4.7.1",
+    "react-hot-loader": "^4.7.2",
     "rimraf": "^2.6.3",
+    "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
-    "terser-webpack-plugin": "^1.2.3",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.2.1"
