--- a/package.json
+++ b/package.json
@@ -33,13 +33,16 @@
     "cross-env": "^5.2.0",
     "css-loader": "^2.1.0",
     "directory-named-webpack-plugin": "^4.0.0",
+    "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "image-webpack-loader": "^4.6.0",
     "node-sass": "^4.11.0",
     "react-app-polyfill": "^0.2.1",
     "react-hot-loader": "^4.7.2",
     "rimraf": "^2.6.3",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
+    "url-loader": "^1.1.2",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.2.1"
