--- a/package.json
+++ b/package.json
@@ -33,6 +33,10 @@
     "cross-env": "^5.2.0",
     "css-loader": "^2.1.0",
     "directory-named-webpack-plugin": "^4.0.0",
+    "eslint": "^5.15.1",
+    "eslint-plugin-jest": "^22.3.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.12.4",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^4.6.0",
