--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@babel/core": "^7.3.4",
     "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
+    "autoprefixer": "^9.4.10",
     "babel-loader": "^8.0.5",
+    "babel-plugin-react-css-modules": "^5.2.1",
     "circular-dependency-plugin": "^5.0.2",
     "colors": "^1.3.3",
     "cross-env": "^5.2.0",
@@ -41,6 +43,7 @@
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^4.6.0",
     "node-sass": "^4.11.0",
+    "postcss-loader": "^3.0.0",
     "react-app-polyfill": "^0.2.1",
     "react-hot-loader": "^4.7.2",
     "rimraf": "^2.6.3",
