--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is my personal React boilerplate with everything that I need.",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=development webpack-dev-server --progress --colors --hot --config ./_tools/webpack/webpack.dev.js",
+    "start": "cross-env NODE_ENV=development webpack-dev-server --colors --hot --config ./_tools/webpack/webpack.dev.js",
     "prebuild": "rimraf ./build",
     "build": "cross-env NODE_ENV=production webpack --config ./_tools/webpack/webpack.prod.js"
   },
@@ -45,7 +45,6 @@
     "node-sass": "^4.11.0",
     "postcss-loader": "^3.0.0",
     "react-app-polyfill": "^0.2.1",
-    "react-hot-loader": "^4.7.2",
     "rimraf": "^2.6.3",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
