--- a/.editorconfig
+++ b/.editorconfig
@@ -13,5 +13,8 @@ trim_trailing_whitespace = true
 [*.md]
 trim_trailing_whitespace = false
 
-[*.json]
+# Matches the exact files either .json and .yml
+[*.{json,yml}]
+indent_style = space
+indent_size = 2
 insert_final_newline = false
