--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack-dev-server --colors --hot --config ./_tools/webpack/webpack.dev.js",
+    "start:debug": "cross-env DEBUG=true npm start",
     "prebuild": "rimraf ./build",
     "build": "cross-env NODE_ENV=production webpack --config ./_tools/webpack/webpack.prod.js"
   },
@@ -36,28 +37,25 @@
     "circular-dependency-plugin": "^5.0.2",
     "colors": "^1.3.3",
     "cross-env": "^5.2.0",
-    "css-loader": "^2.1.0",
-    "directory-named-webpack-plugin": "^4.0.0",
+    "css-loader": "^2.1.1",
+    "directory-named-webpack-plugin": "^4.0.1",
     "eslint": "^5.15.1",
     "eslint-plugin-jest": "^22.3.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
-    "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
-    "image-webpack-loader": "^4.6.0",
     "node-sass": "^4.11.0",
     "postcss-loader": "^3.0.0",
-    "react-app-polyfill": "^0.2.1",
+    "react-hot-loader": "^4.8.0",
     "rimraf": "^2.6.3",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
-    "url-loader": "^1.1.2",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.2.1"
   },
   "dependencies": {
-    "react": "^16.8.3",
-    "react-dom": "^16.8.3"
+    "react": "^16.8.4",
+    "react-dom": "^16.8.4"
   }
 }
