--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack-dev-server --colors --hot --config ./_tools/webpack/webpack.dev.js",
-    "start:debug": "cross-env DEBUG=true npm start",
+    "start:debug": "cross-env DEBUG=true NODE_ENV=development npm start",
     "prebuild": "rimraf ./build",
     "build": "cross-env NODE_ENV=production webpack --config ./_tools/webpack/webpack.prod.js"
   },
@@ -39,7 +39,7 @@
     "css-loader": "^2.1.1",
     "directory-named-webpack-plugin": "^4.0.1",
     "eslint": "^5.15.1",
-    "eslint-plugin-jest": "^22.3.0",
+    "eslint-plugin-jest": "^22.3.2",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
     "html-webpack-plugin": "^3.2.0",
