--- a/package.json
+++ b/package.json
@@ -6,8 +6,14 @@
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack-dev-server --colors --hot --config ./_tools/webpack/webpack.dev.js",
     "start:debug": "cross-env DEBUG=true NODE_ENV=development npm start",
+
     "prebuild": "rimraf ./build",
-    "build": "cross-env NODE_ENV=production webpack --config ./_tools/webpack/webpack.prod.js"
+    "build": "cross-env NODE_ENV=production webpack --config ./_tools/webpack/webpack.prod.js",
+
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+
+    "precommit": "npm run lint"
   },
   "repository": {
     "type": "git",
@@ -33,6 +39,8 @@
     "autoprefixer": "^9.4.10",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
+    "babel-plugin-styled-components": "^1.10.0",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "circular-dependency-plugin": "^5.0.2",
     "colors": "^1.3.3",
     "cross-env": "^5.2.0",
@@ -43,11 +51,13 @@
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
     "html-webpack-plugin": "^3.2.0",
+    "husky": "^1.3.1",
     "node-sass": "^4.11.0",
     "postcss-loader": "^3.0.0",
     "react-hot-loader": "^4.8.0",
     "rimraf": "^2.6.3",
     "sass-loader": "^7.1.0",
+    "size-plugin": "^1.1.2",
     "style-loader": "^0.23.1",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3",
@@ -56,5 +66,8 @@
   "dependencies": {
     "react": "^16.8.4",
     "react-dom": "^16.8.4"
+  },
+  "husky": {
+    "pre-commit": "echo 1 | exit 0"
   }
 }
