--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack-dev-server --colors --hot --config ./_tools/webpack/webpack.dev.js",
     "start:debug": "cross-env DEBUG=true NODE_ENV=development npm start",
-
     "prebuild": "rimraf ./build",
     "build": "cross-env NODE_ENV=production webpack --config ./_tools/webpack/webpack.prod.js",
+
+    "test": "echo \"TODO\"",
 
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
 
+    "validate": "npm-run-all --parallel test lint:fix",
     "precommit": "npm run lint"
   },
   "repository": {
@@ -53,6 +55,7 @@
     "html-webpack-plugin": "^3.2.0",
     "husky": "^1.3.1",
     "node-sass": "^4.11.0",
+    "npm-run-all": "^4.1.5",
     "postcss-loader": "^3.0.0",
     "react-hot-loader": "^4.8.0",
     "rimraf": "^2.6.3",
