--- a/package.json
+++ b/package.json
@@ -70,6 +70,8 @@
     "react-dom": "^16.8.4"
   },
   "husky": {
-    "pre-commit": "npm run validate"
+    "hooks": {
+      "pre-commit": "npm run validate"
+    }
   }
 }
