--- a/package.json
+++ b/package.json
@@ -8,12 +8,9 @@
     "start:debug": "cross-env DEBUG=true NODE_ENV=development npm start",
     "prebuild": "rimraf ./build",
     "build": "cross-env NODE_ENV=production webpack --config ./_tools/webpack/webpack.prod.js",
-
     "test": "echo \"TODO\"",
-
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-
     "validate": "npm-run-all --parallel test lint:fix"
   },
   "repository": {
@@ -37,7 +34,7 @@
     "@babel/plugin-proposal-optional-chaining": "^7.2.0",
     "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
-    "autoprefixer": "^9.4.10",
+    "autoprefixer": "^9.5.0",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
     "babel-plugin-styled-components": "^1.10.0",
@@ -47,8 +44,8 @@
     "cross-env": "^5.2.0",
     "css-loader": "^2.1.1",
     "directory-named-webpack-plugin": "^4.0.1",
-    "eslint": "^5.15.1",
-    "eslint-plugin-jest": "^22.3.2",
+    "eslint": "^5.15.2",
+    "eslint-plugin-jest": "^22.4.1",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
     "html-webpack-plugin": "^3.2.0",
@@ -57,17 +54,21 @@
     "npm-run-all": "^4.1.5",
     "postcss-loader": "^3.0.0",
     "react-hot-loader": "^4.8.0",
+    "redux-immutable-state-invariant": "^2.1.0",
     "rimraf": "^2.6.3",
     "sass-loader": "^7.1.0",
-    "size-plugin": "^1.1.2",
+    "size-plugin": "^1.1.4",
     "style-loader": "^0.23.1",
     "webpack": "^4.29.6",
-    "webpack-cli": "^3.2.3",
+    "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.2.1"
   },
   "dependencies": {
     "react": "^16.8.4",
-    "react-dom": "^16.8.4"
+    "react-dom": "^16.8.4",
+    "react-redux": "^6.0.1",
+    "redux": "^4.0.1",
+    "redux-saga": "^1.0.2"
   },
   "husky": {
     "hooks": {
