update some dependencies

--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "react-boilerplate",
   "version": "0.0.1",
   "description": "This is my personal React boilerplate with everything that I need.",
-  "main": "index.js",
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack-dev-server --colors --hot --config ./_tools/webpack/webpack.dev.js",
     "start:debug": "cross-env DEBUG=true NODE_ENV=development npm start",
@@ -29,10 +28,10 @@
   },
   "homepage": "https://github.com/marlomgirardi/react-boilerplate#readme",
   "devDependencies": {
-    "@babel/core": "^7.3.4",
-    "@babel/plugin-proposal-class-properties": "^7.3.4",
+    "@babel/core": "^7.4.0",
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
     "@babel/plugin-proposal-optional-chaining": "^7.2.0",
-    "@babel/preset-env": "^7.3.4",
+    "@babel/preset-env": "^7.4.2",
     "@babel/preset-react": "^7.0.0",
     "autoprefixer": "^9.5.0",
     "babel-eslint": "^10.0.1",
@@ -44,7 +43,7 @@
     "cross-env": "^5.2.0",
     "css-loader": "^2.1.1",
     "directory-named-webpack-plugin": "^4.0.1",
-    "eslint": "^5.15.2",
+    "eslint": "^5.15.3",
     "eslint-plugin-jest": "^22.4.1",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
@@ -53,11 +52,12 @@
     "node-sass": "^4.11.0",
     "npm-run-all": "^4.1.5",
     "postcss-loader": "^3.0.0",
+    "prop-types": "^15.7.2",
     "react-hot-loader": "^4.8.0",
     "redux-immutable-state-invariant": "^2.1.0",
     "rimraf": "^2.6.3",
     "sass-loader": "^7.1.0",
-    "size-plugin": "^1.1.4",
+    "size-plugin": "^1.2.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
