--- a/package.json
+++ b/package.json
@@ -43,8 +43,9 @@
     "cross-env": "^5.2.0",
     "css-loader": "^2.1.1",
     "directory-named-webpack-plugin": "^4.0.1",
-    "eslint": "^5.15.3",
+    "eslint": "^5.16.0",
     "eslint-plugin-jest": "^22.4.1",
+    "eslint-plugin-jsdoc": "^4.6.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
     "html-webpack-plugin": "^3.2.0",
@@ -53,7 +54,7 @@
     "npm-run-all": "^4.1.5",
     "postcss-loader": "^3.0.0",
     "prop-types": "^15.7.2",
-    "react-hot-loader": "^4.8.0",
+    "react-hot-loader": "^4.8.2",
     "redux-immutable-state-invariant": "^2.1.0",
     "rimraf": "^2.6.3",
     "sass-loader": "^7.1.0",
@@ -64,8 +65,8 @@
     "webpack-dev-server": "^3.2.1"
   },
   "dependencies": {
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-redux": "^6.0.1",
     "redux": "^4.0.1",
     "redux-saga": "^1.0.2"
