--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "sass-loader": "^7.1.0",
     "size-plugin": "^1.2.0",
     "style-loader": "^0.23.1",
+    "terser-webpack-plugin": "^1.2.3",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.2.1"
