--- a/package.json
+++ b/package.json
@@ -28,53 +28,54 @@
   },
   "homepage": "https://github.com/marlomgirardi/react-boilerplate#readme",
   "devDependencies": {
-    "@babel/core": "^7.4.4",
-    "@babel/plugin-proposal-class-properties": "^7.4.4",
-    "@babel/plugin-proposal-optional-chaining": "^7.2.0",
-    "@babel/preset-env": "^7.4.4",
-    "@babel/preset-react": "^7.0.0",
-    "autoprefixer": "^9.5.1",
-    "babel-eslint": "^10.0.1",
+    "@babel/core": "^7.7.2",
+    "@babel/plugin-proposal-class-properties": "^7.7.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.6.0",
+    "@babel/preset-env": "^7.7.1",
+    "@babel/preset-react": "^7.7.0",
+    "@hot-loader/react-dom": "^16.11.0",
+    "@welldone-software/why-did-you-render": "^3.3.9",
+    "autoprefixer": "^9.7.1",
+    "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
-    "babel-plugin-styled-components": "^1.10.0",
+    "babel-plugin-styled-components": "^1.10.6",
     "babel-plugin-transform-remove-console": "^6.9.4",
-    "circular-dependency-plugin": "^5.0.2",
-    "colors": "^1.3.3",
-    "cross-env": "^5.2.0",
-    "css-loader": "^2.1.1",
+    "circular-dependency-plugin": "^5.2.0",
+    "colors": "^1.4.0",
+    "cross-env": "^6.0.3",
+    "css-loader": "^3.2.0",
     "directory-named-webpack-plugin": "^4.0.1",
-    "eslint": "^5.16.0",
+    "eslint": "^6.6.0",
     "eslint-import-resolver-webpack": "^0.11.1",
-    "eslint-loader": "^2.1.2",
-    "eslint-plugin-import": "^2.17.2",
-    "eslint-plugin-jsdoc": "^4.8.4",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.13.0",
+    "eslint-loader": "^3.0.2",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsdoc": "^17.1.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.16.0",
     "html-webpack-plugin": "^3.2.0",
-    "husky": "^2.2.0",
-    "node-sass": "^4.12.0",
+    "husky": "^3.0.9",
+    "node-sass": "^4.13.0",
     "npm-run-all": "^4.1.5",
     "postcss-loader": "^3.0.0",
     "prop-types": "^15.7.2",
-    "react-hot-loader": "^4.8.4",
+    "react-hot-loader": "^4.12.16",
     "redux-immutable-state-invariant": "^2.1.0",
-    "rimraf": "^2.6.3",
-    "sass-loader": "^7.1.0",
-    "size-plugin": "^1.2.0",
-    "style-loader": "^0.23.1",
-    "terser-webpack-plugin": "^1.2.3",
-    "webpack": "^4.31.0",
-    "webpack-bundle-analyzer": "^3.3.2",
-    "webpack-cli": "^3.3.2",
-    "webpack-dev-server": "^3.3.1",
-    "why-did-you-update": "^1.0.6"
+    "rimraf": "^3.0.0",
+    "sass-loader": "^8.0.0",
+    "size-plugin": "^2.0.1",
+    "style-loader": "^1.0.0",
+    "terser-webpack-plugin": "^2.2.1",
+    "webpack": "^4.41.2",
+    "webpack-bundle-analyzer": "^3.6.0",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.9.0"
   },
   "dependencies": {
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-redux": "^7.0.3",
-    "redux": "^4.0.1",
-    "redux-saga": "^1.0.2"
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.4",
+    "redux-saga": "^1.1.3"
   },
   "husky": {
     "hooks": {
