--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "prebuild": "rimraf ./build",
     "build": "cross-env NODE_ENV=production webpack --config ./_tools/webpack/webpack.prod.js",
     "test": "echo \"TODO\"",
-    "lint": "eslint . --ignore-path .gitignore src/**/*.js",
-    "lint:fix": "eslint . --ignore-path .gitignore src/**/*.js --fix",
+    "lint": "eslint 'src/**/*.js' 'src/**/*.jsx' --ignore-path .gitignore",
+    "lint:fix": "eslint 'src/**/*.js' 'src/**/*.jsx' --fix --ignore-path .gitignore",
     "validate": "npm-run-all --parallel test lint:fix"
   },
   "repository": {
@@ -34,11 +34,12 @@
     "@babel/preset-env": "^7.8.4",
     "@babel/preset-react": "^7.8.3",
     "@hot-loader/react-dom": "^16.11.0",
-    "@welldone-software/why-did-you-render": "^4.0.0",
+    "@welldone-software/why-did-you-render": "^4.0.4",
     "autoprefixer": "^9.7.4",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
     "babel-plugin-styled-components": "^1.10.7",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "circular-dependency-plugin": "^5.2.0",
     "colors": "^1.4.0",
@@ -46,34 +47,31 @@
     "css-loader": "^3.4.2",
     "directory-named-webpack-plugin": "^4.0.1",
     "eslint": "^6.8.0",
+    "eslint-config-mg": "^2.0.2",
     "eslint-import-resolver-webpack": "^0.12.1",
     "eslint-loader": "^3.0.3",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-jsdoc": "^21.0.0",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.18.2",
     "html-webpack-plugin": "^3.2.0",
-    "husky": "^4.2.1",
+    "husky": "^4.2.3",
     "node-sass": "^4.13.1",
     "npm-run-all": "^4.1.5",
     "postcss-loader": "^3.0.0",
-    "prop-types": "^15.7.2",
     "react-hot-loader": "^4.12.19",
     "redux-immutable-state-invariant": "^2.1.0",
-    "rimraf": "^3.0.1",
+    "rimraf": "^3.0.2",
     "sass-loader": "^8.0.2",
     "size-plugin": "^2.0.1",
     "style-loader": "^1.1.3",
-    "terser-webpack-plugin": "^2.3.4",
-    "webpack": "^4.41.5",
+    "terser-webpack-plugin": "^2.3.5",
+    "webpack": "^4.41.6",
     "webpack-bundle-analyzer": "^3.6.0",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.10.2"
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-redux": "^7.1.3",
+    "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3"
   },
