--- a/package.json
+++ b/package.json
@@ -1,84 +1,88 @@
 {
-  "name": "react-boilerplate",
-  "version": "0.0.1",
-  "description": "This is my personal React boilerplate with everything that I need.",
-  "scripts": {
-    "start": "cross-env NODE_ENV=development webpack-dev-server --colors --hot --config ./_tools/webpack/webpack.dev.js",
-    "start:debug": "cross-env DEBUG=true NODE_ENV=development npm start",
-    "prebuild": "rimraf ./build",
-    "build": "cross-env NODE_ENV=production webpack --config ./_tools/webpack/webpack.prod.js",
-    "test": "echo \"TODO\"",
-    "lint": "eslint 'src/**/*.js' 'src/**/*.jsx' --ignore-path .gitignore",
-    "lint:fix": "eslint 'src/**/*.js' 'src/**/*.jsx' --fix --ignore-path .gitignore",
-    "validate": "npm-run-all --parallel test lint:fix"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/marlomgirardi/react-boilerplate.git"
-  },
-  "keywords": [],
-  "author": {
-    "name": "Marlom Girardi",
-    "email": "marlom.girardi@gmail.com",
-    "url": "https://github.com/marlomgirardi"
-  },
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/marlomgirardi/react-boilerplate/issues"
-  },
-  "homepage": "https://github.com/marlomgirardi/react-boilerplate#readme",
-  "devDependencies": {
-    "@babel/core": "^7.8.7",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
-    "@babel/plugin-proposal-optional-chaining": "^7.8.3",
-    "@babel/preset-env": "^7.8.7",
-    "@babel/preset-react": "^7.8.3",
-    "@hot-loader/react-dom": "^16.12.0",
-    "@welldone-software/why-did-you-render": "^4.0.5",
-    "autoprefixer": "^9.7.4",
-    "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.0.6",
-    "babel-plugin-styled-components": "^1.10.7",
-    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
-    "babel-plugin-transform-remove-console": "^6.9.4",
-    "circular-dependency-plugin": "^5.2.0",
-    "colors": "^1.4.0",
-    "cross-env": "^7.0.2",
-    "css-loader": "^3.4.2",
-    "directory-named-webpack-plugin": "^4.0.1",
-    "eslint": "^6.8.0",
-    "eslint-config-mg": "^2.0.2",
-    "eslint-import-resolver-webpack": "^0.12.1",
-    "eslint-loader": "^3.0.3",
-    "html-webpack-plugin": "^3.2.0",
-    "husky": "^4.2.3",
-    "node-sass": "^4.13.1",
-    "npm-run-all": "^4.1.5",
-    "postcss-loader": "^3.0.0",
-    "react-hot-loader": "^4.12.19",
-    "redux-immutable-state-invariant": "^2.1.0",
-    "rimraf": "^3.0.2",
-    "sass-loader": "^8.0.2",
-    "size-plugin": "^2.0.1",
-    "style-loader": "^1.1.3",
-    "terser-webpack-plugin": "^2.3.5",
-    "webpack": "^4.42.0",
-    "webpack-bundle-analyzer": "^3.6.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
-  },
-  "dependencies": {
-    "prop-types": "^15.7.2",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
-    "react-redux": "^7.2.0",
-    "redux": "^4.0.5",
-    "redux-saga": "^1.1.3"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run validate"
+    "name": "react-boilerplate",
+    "version": "0.0.1",
+    "description": "This is my personal React boilerplate with everything that I need.",
+    "scripts": {
+        "start": "cross-env NODE_ENV=development webpack-dev-server --colors --hot --config ./_tools/webpack/webpack.dev.js",
+        "start:debug": "cross-env DEBUG=true NODE_ENV=development npm start",
+        "prebuild": "rimraf ./build",
+        "build": "cross-env NODE_ENV=production webpack --config ./_tools/webpack/webpack.prod.js",
+        "test": "echo \"TODO\"",
+        "lint": "eslint 'src/**/*.js' 'src/**/*.jsx' --ignore-path .gitignore; prettier . -l --ignore-path .gitignore",
+        "lint:fix": "eslint 'src/**/*.js' 'src/**/*.jsx' --fix --ignore-path .gitignore; prettier . --write -l --ignore-path .gitignore",
+        "validate": "npm-run-all --parallel test lint:fix"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/marlomgirardi/react-boilerplate.git"
+    },
+    "keywords": [],
+    "author": {
+        "name": "Marlom Girardi",
+        "email": "marlom.girardi@gmail.com",
+        "url": "https://github.com/marlomgirardi"
+    },
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/marlomgirardi/react-boilerplate/issues"
+    },
+    "homepage": "https://github.com/marlomgirardi/react-boilerplate#readme",
+    "devDependencies": {
+        "@babel/core": "^7.12.9",
+        "@babel/plugin-proposal-class-properties": "^7.12.1",
+        "@babel/plugin-proposal-nullish-coalescing-operator": "^7.12.1",
+        "@babel/plugin-proposal-optional-chaining": "^7.12.7",
+        "@babel/preset-env": "^7.12.7",
+        "@babel/preset-react": "^7.12.7",
+        "@hot-loader/react-dom": "^17.0.0",
+        "@welldone-software/why-did-you-render": "^6.0.3",
+        "autoprefixer": "^10.0.3",
+        "babel-eslint": "^10.1.0",
+        "babel-loader": "^8.2.2",
+        "babel-plugin-styled-components": "^1.12.0",
+        "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+        "babel-plugin-transform-remove-console": "^6.9.4",
+        "circular-dependency-plugin": "^5.2.2",
+        "colors": "^1.4.0",
+        "cross-env": "^7.0.2",
+        "css-loader": "^5.0.1",
+        "directory-named-webpack-plugin": "^4.0.1",
+        "eslint": "^7.14.0",
+        "eslint-config-mg": "^3.0.0",
+        "eslint-config-prettier": "^6.15.0",
+        "eslint-import-resolver-webpack": "^0.13.0",
+        "eslint-loader": "^4.0.2",
+        "eslint-plugin-prettier": "^3.1.4",
+        "html-webpack-plugin": "^4.5.0",
+        "husky": "^4.3.0",
+        "node-sass": "^5.0.0",
+        "npm-run-all": "^4.1.5",
+        "postcss-loader": "^4.1.0",
+        "react-hot-loader": "^4.13.0",
+        "redux-immutable-state-invariant": "^2.1.0",
+        "rimraf": "^3.0.2",
+        "sass-loader": "^10.1.0",
+        "size-plugin": "^2.0.1",
+        "style-loader": "^2.0.0",
+        "terser-webpack-plugin": "^5.0.3",
+        "webpack": "^5.8.0",
+        "webpack-bundle-analyzer": "^4.1.0",
+        "webpack-cli": "^3.3.12",
+        "webpack-dev-server": "^3.11.0"
+    },
+    "dependencies": {
+        "prettier": "^2.2.0",
+        "prop-types": "^15.7.2",
+        "react": "^17.0.1",
+        "react-dom": "^17.0.1",
+        "react-redux": "^7.2.2",
+        "redux": "^4.0.5",
+        "redux-saga": "^1.1.3",
+        "styled-components": "^5.2.1"
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "npm run validate"
+        }
     }
-  }
 }
